<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgorund"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:id="@+id/llKebuyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imKebudayaan"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/vector_budaya" />

            <TextView
                android:id="@+id/tvKebuyaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/kebuyaan"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llKuliner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llKebuyaan"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imKuliner"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/vector_kuliner" />

            <TextView
                android:id="@+id/tvKuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/kuliner"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llKuliner"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imWisata"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/vector_wisata" />

            <TextView
                android:id="@+id/tvWisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wisata"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/networkError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/internet_bermasalah"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>